[package]
name = "renterd_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "json"] }
thiserror = "1.0"
url = "2.5"
zeroize = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
bigdecimal = { version = "0.4", features = ["serde-json"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
bandwidth = "0.3"

[dev-dependencies]
anyhow = "1.0"