[package]
name = "renterd_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "json", "stream"] }
thiserror = "1.0"
url = "2.5"
zeroize = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
bigdecimal = { version = "0.4", features = ["serde-json"] }
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
bandwidth = "0.3"
reqwest-file = { path = "vendor/reqwest-file" }
futures = "0.3"
tokio-util = { version = "0.7", default-features = false, features = ["compat"] }
either = "1.13"
bytes = "1.6.0"

[dev-dependencies]
anyhow = "1.0"